--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -24,7 +24,7 @@ body {
 
 header {
     /*border: 1px solid yellow;*/
-    
+
 }
 
 footer {
@@ -34,7 +34,7 @@ footer {
     left: 0;
     background-color: #04184D;
     width: 100%;
-    height: 140px;
+    /**height: 140px;**/
     display: flex;
     flex-direction: column;
     z-index: 2;
@@ -129,23 +129,7 @@ hr {
     left: 50%;
 }
 
-.icon-bar a {
-    margin: 15px;
-    height: 60px;
-    display: flex;
-    align-items: center;
-}
 
-.icon-bar a img {
-    width: 60px;
-}
-
-.icon-bar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 90px;
-}
 
 .imprint {
     height: 20px;
@@ -161,13 +145,15 @@ hr {
 article {
     min-width: 300px;
     max-width: 1200px;
-    /*border: 1px solid yellow;*/ /*** DEBUG **/
-    background: linear-gradient(00deg, rgba(3,20,65,0.6) 0%, rgba(4,24,77,1) 100%);
-    
+    /*border: 1px solid yellow;*/
+    /*** DEBUG **/
+    background: linear-gradient(00deg, rgba(3, 20, 65, 0.6) 0%, rgba(4, 24, 77, 1) 100%);
+
 }
 
 article > div {
-    /*border: 1px solid red; *//***DEBUG***/
+    /*border: 1px solid red; */
+    /***DEBUG***/
     width: 40%;
     margin: 20px 20px;
 }
@@ -287,12 +273,36 @@ textarea:focus {
 }
 
 /************************   MEDIA QUERIES    ***********************/
-/* mobile */
+/***** mobile ******/
 span.desktop {
     display: none;
 }
 
-/* tablet */
+p.datenschutz,
+p.impressum {
+    display: none;
+}
+
+/**ICON BAR**/
+.icon-bar a {
+    margin: 15px;
+    height: 25px;
+    display: flex;
+    align-items: center;
+}
+
+.icon-bar a img {
+    width: 30px;
+}
+
+.icon-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+}
+
+/***** tablet *****/
 
 @media only screen and (min-width: 768px) {
 
@@ -375,7 +385,24 @@ span.desktop {
     .imprint p {
         margin: 0px 20px;
     }
+
+    /**ICON BAR**/
+    .icon-bar a {
+        margin: 15px;
+        height: 60px;
+    }
+
+    .icon-bar a img {
+        width: 60px;
+    }
+
+    .icon-bar {
+        height: 90px;
+    }
+
 }
+
+
 
 
 /* Desktop */
@@ -402,6 +429,14 @@ span.desktop {
 
     main {
         height: 99vh;
+    }
+
+    p.datenschutz,
+    p.impressum {
+        display: flex;
+    }
+    footer {
+        height: 140px;
     }
 
 }
