--- a/assets/CSS/burger.css
+++ b/assets/CSS/burger.css
@@ -1,37 +1,43 @@
 input#burger {
     opacity: 0%;
 }
+
 h1 {
-    font-size: 20px;
+    font-size: 13px;
     text-transform: uppercase;
     margin-left: 90px;
-    margin-right: 100px;
+    margin-right: 60px;
 }
+
 body header input ~ nav div.hidetext {
     background-color: #04184D;
     width: 100%;
-    height: 100px;
+    height: 50px;
     z-index: 50;
 }
+
 body header label {
+    /** Burger Größe insgesamt **/
     position: fixed;
-    right: 30px;
-    top: 30px;
-    height: 40px;
-    width: 40px;
+    right: 15px;
+    top: 15px;
+    height: 20px;
+    width: 20px;
     z-index: 20;
 }
 
 body header label span {
+    /** Burger Linienstärke **/
     position: absolute;
     width: 100%;
-    height: 4px;
+    height: 2px;
     top: 50%;
     margin-top: -1px;
     left: 0;
     display: block;
     transition: .5s;
 }
+
 body header {
     height: 0;
 }
@@ -39,10 +45,11 @@ body header {
 body > div {
     position: fixed;
     z-index: 6;
-    height: 100px;
+    height: 50px;
     width: 100%;
-    
+
 }
+
 /*          Burger Color            */
 
 body header input ~ label span {
@@ -50,11 +57,11 @@ body header input ~ label span {
 }
 
 body header input ~ label span:first-child {
-    top: 8px;
+    top: 4px;
 }
 
 body header input ~ label span:last-child {
-    top: 32px;
+    top: 16px;
 }
 
 body header label:hover {
@@ -81,7 +88,7 @@ body header input ~ nav {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100px;
+    height: 50px;
     z-index: 3;
     transition: .5s;
     transition-delay: .5s;
@@ -92,16 +99,19 @@ body header input ~ nav {
 body input ~ nav {
     width: 100%;
     background: #04184D;
+    height: 100%;
 }
 
 body input ~ nav > ul {
     text-align: center;
     position: absolute;
-    margin-top:  100px;
+    margin-top: 50px;
     top: 20%;
     left: 10%;
     right: 10%;
     padding: 0;
+    /***/
+  
 }
 
 body nav > ul > li {
@@ -113,17 +123,18 @@ body nav > ul > li {
 
 /****** Nav Link Properties *******/
 body input ~ nav > ul > li > a {
+    font-size: 12px;
     text-decoration: none;
     text-transform: uppercase;
     color: white;
     display: block;
-    padding: 20px;
+    padding: 10px;
 }
 
 body input:checked ~ nav {
     height: 100%;
-    margin: -100px 0 120px 0;
-    padding-bottom: 100px;
+    margin: -50px 0 120px 0;
+    padding-bottom: 60px;
     transition-delay: 0s;
 }
 
@@ -135,4 +146,83 @@ body input:checked ~ nav > ul > li {
 /* customized css */
 body nav ul {
     list-style-type: none;
+}
+
+/***************** MEDIA QUERIES **************************/
+
+/***** tablet *****/
+
+@media only screen and (min-width: 768px) {
+    h1 {
+        font-size: 20px;
+    }
+
+    body header input ~ nav div.hidetext {
+        height: 100px;
+    }
+
+    body header label {
+        right: 30px;
+        top: 30px;
+        height: 40px;
+        width: 40px;
+    }
+
+    body header label span {
+        height: 4px;
+
+    }
+
+    body header {
+        height: 0;
+    }
+
+    body > div {
+        height: 100px;
+    }
+
+    body header input ~ label span:first-child {
+        top: 8px;
+    }
+
+    body header input ~ label span:last-child {
+        top: 32px;
+    }
+
+    body header input:checked ~ label span:first-child {
+        top: 16px;
+    }
+
+    body header input:checked ~ label span:last-child {
+        top: 16px;
+    }
+
+    body header input ~ nav {
+        height: 100px;
+
+    }
+    
+    /****** Nav Background  Color ******/
+body input ~ nav {
+}
+
+body input ~ nav > ul { 
+    margin-top: 100px;    
+}
+
+body nav > ul > li {
+}
+
+    /****** Nav Link Properties *******/
+    body input ~ nav > ul > li > a {
+        font-size: 1em;
+        padding: 10px;
+    }
+
+    body input:checked ~ nav {
+        margin: -100px 0 120px 0;
+        padding-bottom: 100px;
+    }
+
+
 }
