--- a/assets/CSS/burger.css
+++ b/assets/CSS/burger.css
@@ -5,8 +5,8 @@ input#burger {
 h1 {
     font-size: 13px;
     text-transform: uppercase;
-    margin-left: 90px;
-    margin-right: 60px;
+    margin-left: 50px;
+    margin-right: 30px;
 }
 
 body header input ~ nav div.hidetext {
@@ -111,7 +111,7 @@ body input ~ nav > ul {
     right: 10%;
     padding: 0;
     /***/
-  
+
 }
 
 body nav > ul > li {
@@ -155,6 +155,8 @@ body nav ul {
 @media only screen and (min-width: 768px) {
     h1 {
         font-size: 20px;
+        margin-left: 90px;
+        margin-right: 60px;
     }
 
     body header input ~ nav div.hidetext {
@@ -201,17 +203,15 @@ body nav ul {
         height: 100px;
 
     }
-    
+
     /****** Nav Background  Color ******/
-body input ~ nav {
-}
+    body input ~ nav {}
 
-body input ~ nav > ul { 
-    margin-top: 100px;    
-}
+    body input ~ nav > ul {
+        margin-top: 100px;
+    }
 
-body nav > ul > li {
-}
+    body nav > ul > li {}
 
     /****** Nav Link Properties *******/
     body input ~ nav > ul > li > a {
