--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -60,7 +60,7 @@ div.start div.overlay {
     height: 100%;
     width: 100%;
     background-color: #04184D;
-    opacity: 70%;
+    opacity: 0.7;
     z-index:-1;
 }
 
