--- a/assets/CSS/burger.css
+++ b/assets/CSS/burger.css
@@ -100,6 +100,7 @@ body input ~ nav {
     width: 100%;
     background: #04184D;
     height: 100%;
+    z-index: 1;
 }
 
 body input ~ nav > ul {
@@ -129,6 +130,7 @@ body input ~ nav > ul > li > a {
     color: white;
     display: block;
     padding: 10px;
+    z-index: 2;
 }
 
 body input:checked ~ nav {
