--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -21,7 +21,7 @@ body {
     background-color: #04184D;/* dunkelblau */
 }
 body.start {
-    overflow: hidden;
+    /**overflow: hidden;**/
     height: 100%;
 }
 
