Kleine Änderungen, Versuch die Checkbox für Burgemrenü zu verstecken, die man bei Elasticscroll am Handy sieht.

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -19,6 +19,7 @@ body {
     margin: 0;
     color: white;
     background-color: #04184D;/* dunkelblau */
+    z-index: 0;
 }
 body.start {
     /**overflow: hidden;**/
