--- a/assets/CSS/text-flex.css
+++ b/assets/CSS/text-flex.css
@@ -3,6 +3,18 @@
     src: url('assets/font/BaarSophia-lg4Z.ttf') format ('truetype');
 }
 
+/****FONT****/
+body {
+    /**font-family: 'Open Sans', sans-serif;**/
+    font-family: 'Muli', sans-serif;
+    font-size: 12px;
+    letter-spacing: 0px;
+    word-spacing: 0.3px;
+    line-height: 20px;
+    font-weight: 200;
+}
+
+
 h3 {
     margin:inherit;
 }
