--- a/assets/CSS/text-flex.css
+++ b/assets/CSS/text-flex.css
@@ -14,49 +14,71 @@ body {
     font-weight: 200;
 }
 
+main article p strong {
+    font-weight: 900;
+    letter-spacing: 1px;
+    font-size: 1.2em;
+}
+
 
 h3 {
-    margin:inherit;
+    margin: inherit;
 }
+
 .text-l {
     text-align: left;
 }
+
 .text-r {
     text-align: right;
 }
+
 .text-c {
     text-align: center;
 }
+
 .text-block {
     text-align: justify;
 }
+
 .text-bold {
-    font-weight: bold;/* normal -> keine Fette  */
+    font-weight: bold;
+    /* normal -> keine Fette  */
 }
+
 .text-light {
-    font-weight: lighter;/* normal -> keine Fette  */
+    font-weight: lighter;
+    /* normal -> keine Fette  */
 }
+
 .text-italic {
     font-style: italic;
 }
+
 .text-underline {
     text-decoration: underline;
 }
+
 .text-overline {
     text-decoration: overline;
 }
+
 .text-linetrough {
     text-decoration: line-through;
 }
+
 .text-wordspace {
     word-spacing: 10px;
 }
+
 .text-letterspace {
     letter-spacing: 0.3px;
 }
+
 .text-lineheight {
     line-height: 22px;
 }
+
 .text-uppercase {
     text-transform: uppercase;
 }
@@ -69,10 +91,11 @@ h3 {
     text-transform: capitalize;
 }
 
-.text-firstletter::first-line {
+.text-firstletter::first-line {
     color: red;
     font-size: 36px;
 }
+
 .text-firstline::first-line {
     font-weight: 900;
 }
@@ -109,37 +132,64 @@ a:hover {
 .flex-row {
     flex-direction: row;
 }
+
 .flex-row-rev {
     flex-direction: row-reverse;
 }
+
 .flex-column {
     flex-direction: column;
 }
+
 .flex-justify-evenly {
     justify-content: space-evenly;
 }
+
 .flex-justify-center {
     justify-content: center;
 }
+
 .flex-justify-end {
     justify-content: flex-end;
 }
+
 .flex-align-center {
     align-items: center;
 }
+
 .flex-align-start {
     align-items: flex-start;
 }
+
 .flex-align-end {
     align-items: flex-end;
 }
+
 .flex-wrap {
     flex-wrap: wrap
 }
+
 .flex-nowrap {
     flex-wrap: nowrap
 }
-a.btn, button.btn {
+
+/**** BTNS *****/
+
+.cta-btns {
+    z-index: 1;
+    margin-bottom: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+}
+
+.cta-btns a {
+    margin: 0 16px 10px;
+    width: 150px;
+    font-size: 13px;
+}
+a.btn,
+button.btn {
     display: inline-block;
     color: black;
     background: lightpink;
@@ -150,12 +200,38 @@ a.btn, button.btn {
     font-weight: bold;
 }
 
-a.btn:hover, button.btn:hover {
+a.btn:hover,
+button.btn:hover {
     transition: background 1s;
-    background: linear-gradient(45deg, rgba(255,227,0,1) 0%, rgba(255,245,163,1) 50%, rgba(255,227,0,1) 100%);
+    background: linear-gradient(45deg, rgba(255, 227, 0, 1) 0%, rgba(255, 245, 163, 1) 50%, rgba(255, 227, 0, 1) 100%);
     cursor: pointer;
 }
+
 textarea {
     resize: vertical;
     overflow: auto;
+}
+
+/********************* MEDIA QUERIES *************************/
+/***** tablet *****/
+
+@media only screen and (min-width: 768px) {
+    body {
+        font-size: 16px;
+        letter-spacing: 0.2px;
+        word-spacing: 0.5px;
+        line-height: 24px;
+        font-weight: 100;
+    }
+    /***** BTNS*****/
+    .cta-btns {
+        flex-direction: row;
+        margin-bottom: 0px;
+    }
+
+    .cta-btns a {
+        margin: 0 16px;
+        font-size: 1em;
+    }
+
 }
