Added Ticket buttons on home screen.

--- a/assets/CSS/text-flex.css
+++ b/assets/CSS/text-flex.css
@@ -216,6 +216,10 @@ a.btn-highlight {
     background: lightgreen;
 }
 
+.btn-row a.btn {
+    margin: 0 0 0 20px;
+}
+
 a.btn:hover,
 button.btn:hover {
     transition: background 1s;
