--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -12,7 +12,14 @@ body {
     /*height: 100%;*/
     position: relative;
 }
+.flex > ul {
+    min-width: 200px;
+    margin: 0;
+}
 
+.ul {
+    margin: 20px 0px;
+}
 
 body {
 
