Kleine Änderungen im Tickets Banner

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -81,17 +81,29 @@ div.start {
     margin-left: 10px;
     width: 40px;
 }
-
-#top-img .container{
+#banner {
+   
+    background-color: black;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+    border: 0px;
+}
+#banner .banner div{
     max-width: 800px;
     position: relative;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+    
 }
 
-#top-img .container img {
+#banner .banner img {
+    height: inherit;
     width: 100%;
 }
 
-#top-img a {
+#banner a {
     position: absolute;
     top: 50%;
     left: 50%;
