--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -35,10 +35,9 @@ body.start {
     height: 100%;
 }
 
-header {
-    /*border: 1px solid yellow;*/
 
-}
+
+
 
 footer {
     position: absolute;
@@ -81,6 +80,12 @@ div.start {
     margin-left: 10px;
     width: 40px;
 }
+
+.small-logo img {
+    width: 70px;
+}
+
+
 #banner {
    
     background-color: black;
@@ -99,7 +104,7 @@ div.start {
 }
 
 #banner .banner img {
-    height: inherit;
+    height: 100%;
     width: 100%;
 }
 
@@ -126,7 +131,8 @@ img.vid-placeholder {
 }
 
 img.vid-placeholder {
-    position: absolute z-index: -3;
+    position: absolute;
+     z-index: -3;
 }
 
 img.test {
@@ -264,9 +270,7 @@ figcaption {
     width: 100%;
 }
 
-div p.anschrift {
-    /*font-size: 8px;*/
-}
+
 
 h1.start {
     margin-left: 15px;
@@ -294,7 +298,7 @@ a span {
     font-size: 20px;
 }
 
-section.video-bg {}
+
 
 main.contact {
     width: auto;
