Kleine Änderung im Menü für Tablet und höher

--- a/assets/CSS/burger.css
+++ b/assets/CSS/burger.css
@@ -208,6 +208,10 @@ body nav ul {
 
     }
 
+    body input ~ nav > ul {
+        top: 10%;
+    }
+
     /****** Nav Background  Color ******/
     body input ~ nav {}
 
