--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -85,6 +85,7 @@ div.start {
 
 .small-logo img {
     width: 40px;
+    height: 40px;
 }
 
 
@@ -409,8 +410,9 @@ p.impressum {
     align-items: center;
 }
 
-.icon-bar a img {
+.social-icons {
     width: 30px;
+    height: 30px;
     z-index: 10;
 }
 
@@ -451,6 +453,7 @@ p.impressum {
 
     .small-logo img {
         width: 70px;
+        height: auto;
     }
 
     .ticket-col {
@@ -559,9 +562,9 @@ p.impressum {
         height: 60px;
     }
 
-    .icon-bar a img {
+    .social-icons {
         width: 60px;
-
+        height: 60px;
     }
 
     .flame-hover {
