Footer with navigation

--- a/assets/CSS/text-flex.css
+++ b/assets/CSS/text-flex.css
@@ -178,6 +178,10 @@ a:hover {
     flex-wrap: wrap;
 }
 
+.flex-wrap-rev {
+    flex-wrap: wrap-reverse;
+}
+
 .flex-nowrap {
     flex-wrap: nowrap;
 }
