--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -56,7 +56,7 @@ footer {
 main {
 
     position: relative;
-    height: 88vh;
+    height: 80vh;
     overflow: hidden;
 }
 
@@ -170,15 +170,28 @@ hr {
 }
 
 
-.imprint {
-    height: 24px;
-    margin-top: 4px;
+.footer-container {
+    margin: 24px 0px;
+    width: auto;
+    max-width: 900px;
 }
 
-.imprint p {
-    margin: 0px 20px 6px;
-    font-size: 11px;
+.footer-column {
+    flex-grow: 1;
+    min-width: 250px;
+    padding: 16px;
 }
+
+.footer-container p {
+    margin: 0px 20px 6px;
+    font-size: 12px;
+}
+
+
+.footer-copyright {
+    flex-grow: 2;
+}
+
 
 section {
     padding: 0px;
@@ -348,9 +361,6 @@ h1.start {
     margin-left: 15px;
 }
 
-div.imprint div:first-child {
-    display: none;
-}
 
 p.anschrift {
     margin: 10px;
@@ -430,10 +440,7 @@ span.desktop {
     display: none;
 }
 
-p.datenschutz,
-p.impressum {
-    display: none;
-}
+
 
 /**ICON BAR**/
 
@@ -536,15 +543,12 @@ p.impressum {
     }
 
     main {
-        height: 98vh;
+        height: 91vh;
     }
 
 
 
-    footer {
-        height: 140px;
-    }
-
+   
     .body-margin {
         margin: 100px 0 140px 0;
     }
@@ -570,15 +574,9 @@ p.impressum {
         height: 432px;
     }
 
-    div.imprint div:first-child {
-        display: flex;
-    }
 
-    .imprint {
-        margin-top: 10px;
-    }
 
-    .imprint p {
+    .footer-container p {
         margin: 0px 20px;
     }
 
@@ -659,18 +657,12 @@ p.impressum {
 
     }
 
-    main {
-        height: 99vh;
-    }
+    /*main {
+        height: 92vh;
+    }*/
 
-    p.datenschutz,
-    p.impressum {
-        display: flex;
-    }
-
-    footer {
-        height: 140px;
-    }
+   
+s
 
     .logo-grp {
         position: absolute;
@@ -708,11 +700,6 @@ p.impressum {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
 
-    /*grid-template-areas:
-    "header header header"
-    "sidebar content content"
-    "sidebar content content"
-    "footer footer footer";*/
 
     gap: 4px;
 }
@@ -727,22 +714,7 @@ p.impressum {
     }
     
 }
-/*
-.header {
-    grid-area: header;
-}
 
-.sidebar {
-    grid-area: sidebar;
-}
-
-.main-content {
-    grid-area: content;
-}
-
-.footer {
-    grid-area: footer;
-}*/
 
 .item {
     background-color: grey;
