--- a/assets/CSS/text-flex.css
+++ b/assets/CSS/text-flex.css
@@ -192,6 +192,10 @@ a:hover {
     text-decoration: underline;
 }
 
+#banner a:hover {
+    text-decoration: none;
+}
+
 .flex {
     display: flex;
 }
